# sayr-engine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
cookbook/echo-agent/: Cargo.toml
cookbook/observability-demo/: README.md
cookbook/templates/: app-config.toml
libs/agno-core/src/: agent.rs  message.rs  tool.rs
libs/sayr-core/: Cargo.toml
libs/sayr-core/src/: error.rs  lib.rs  llm.rs  memory.rs  message.rs  tool.rs
libs/sayr-py/: .env  Cargo.toml  pyproject.toml
libs/sayr-py/src/: lib.rs
libs/sayr-py/tests/: benchmark.py  verify_bindings.py
scripts/: SCHEMA.md  check.sh  schema.sql
src/: agent.rs  config.rs  deployment.rs  error.rs  governance.rs  guardrails.rs  hooks.rs  knowledge.rs  lib.rs  llm.rs  mcp.rs  memory.rs  message.rs  metrics.rs  reasoning.rs  runtime.rs  server.rs  storage.rs  team.rs  telemetry.rs  tool.rs  toolkit.rs  workflow.rs
src/tools/: arxiv.rs  calculator.rs  discord.rs  duckdb.rs  duckduckgo.rs  github.rs  gmail.rs  http.rs  json.rs  mod.rs  postgres.rs  pubmed.rs  shell.rs  slack.rs  sql.rs  wikipedia.rs
src/ui/: dashboard.html
tests/: benchmark_cohere.rs  benchmark_cpu.rs  llm_providers.rs  telemetry_metrics.rs
