[workspace]
members = [
    "libs/agno-core",
    "cookbook/echo-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGNO Rust Contributors"]
license = "MIT"
repository = "https://github.com/agno-agi/agno-rust"

[workspace.dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }

[package]
name = "agno-rust"
version = "0.1.0"
edition = "2021"

description = "A Rust port of Agno: lightweight agent framework with tools, loops, and LLMs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/YASSERRMD/agno-rust"
homepage = "https://github.com/YASSERRMD/agno-rust"
keywords = ["agno","agent","ai","rust","core"]
categories = ["development-tools","algorithms"] 

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
