[workspace]
members = [
    "libs/agno-core",
    "cookbook/echo-agent",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AGNO Rust Contributors"]
license = "MIT"
repository = "https://github.com/agno-agi/agno-rust"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }

[package]
name = "agno-rust"
version = "0.2.0"
edition = "2021"

description = "A Rust port of Agno: lightweight agent framework with tools, loops, and LLMs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/YASSERRMD/agno-rust"
homepage = "https://github.com/YASSERRMD/agno-rust"
keywords = ["agno","agent","ai","rust","core"]
categories = ["development-tools","algorithms"] 

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "process", "time"] }
axum = { version = "0.7", features = ["macros", "json", "tokio"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
sysinfo = { version = "0.30", default-features = false, features = ["multithread"] }
toml = "0.8"
tempfile = "3"
reqwest = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry", "json"] }
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["grpc-tonic", "trace", "metrics"] }
opentelemetry-prometheus = "0.15"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite", "chrono"] }
urlencoding = "2.1"
regex = "1.10"
