[package]
name = "echo-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
sayr-core = { path = "../../libs/sayr-core" }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
